--- a/CPSMonitoringSystemGUI/CMakeLists.txt
+++ b/CPSMonitoringSystemGUI/CMakeLists.txt
@@ -9,45 +9,39 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+# Ensure you are finding the appropriate Qt package and including the WebSockets component
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets WebSockets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets WebSockets)
 
 set(PROJECT_SOURCES
         main.cpp
         cpsmainwindow.cpp
         cpsmainwindow.h
-)
-
-set(app_icon_resource_windows "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
-
-
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(MonitoritngSystem
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
-        Ut.ico
-        ${app_icon_resource_windows}
         cpshistorywindow.h cpshistorywindow.cpp
         cpstextfield.h cpstextfield.cpp
         cpsbutton.h cpsbutton.cpp
         cpslabel.h cpslabel.cpp
         cpswindowsapitools.h
         cpsapplication.h cpsapplication.cpp
+        HTTP
+        httprequest.h httprequest.cpp
+        httpresponse.h httpresponse.cpp
+        bidirectionalconnection.h bidirectionalconnection.cpp
+)
+
+set(app_icon_resource_windows "${CMAKE_CURRENT_SOURCE_DIR}/icon.rc")
+
+if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    qt_add_executable(MonitoritngSystem
+        MANUAL_FINALIZATION
+        ${PROJECT_SOURCES}
+        ${app_icon_resource_windows}
     )
-
-set(app_icon_resource_windows "${CMAKE_CURRENT_SOURCE_DIR}/Ut.ico")
-
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET QWidgetsProhect APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
         add_library(MonitoritngSystem SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
         add_executable(MonitoritngSystem
             ${PROJECT_SOURCES}
@@ -56,28 +50,18 @@ else()
 endif()
 
 if(WIN32)
-    target_link_libraries(MonitoritngSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets dwmapi)
+    target_link_libraries(MonitoritngSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::WebSockets dwmapi)
 else()
-    target_link_libraries(MonitoritngSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+    target_link_libraries(MonitoritngSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::WebSockets)
 endif()
 
-# target_link_libraries(QWidgetsProhect PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.QWidgetsProhect)
-endif()
 set_target_properties(MonitoritngSystem PROPERTIES
-    ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
 
-include(GNUInstallDirs)
 install(TARGETS MonitoritngSystem
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
