init: Modularization of the Cloud Server Adding new classes for managing WebServerSocket

--- a/CloudWebServer/CMakeLists.txt
+++ b/CloudWebServer/CMakeLists.txt
@@ -1,19 +1,35 @@
 cmake_minimum_required(VERSION 3.16)
-project(RFIDServer)
+project(RFIDServerr)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 COMPONENTS Core Network HttpServer REQUIRED)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(RFIDServer main.cpp)
+# Find only necessary Qt packages
+find_package(Qt6 REQUIRED COMPONENTS Core Network HttpServer WebSockets)
 
-target_link_libraries(RFIDServer Qt6::Core Qt6::Network Qt6::HttpServer)
+# Define your executable and related files
+add_executable(RFIDServerr
+    main.cpp
+    socketserver.cpp
+    socketserver.h
+    server.cpp
+    server.h
+)
+
+# Link against the Qt modules you found above
+target_link_libraries(RFIDServerr
+    Qt6::Core
+    Qt6::Network
+    Qt6::HttpServer
+    Qt6::WebSockets
+)
 
 include(GNUInstallDirs)
-install(TARGETS RFIDServer
+install(TARGETS RFIDServerr
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
